# semperos-sel4

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  TASK06-REPORT.md  TASK07-REPORT.md  domain_schedule.c  easy-settings.cmake  semperos-sel4-xcpng.camkes  semperos-sel4.camkes  semperos-sel4.camkes.in  settings-xcpng.cmake  settings.cmake
.claude/: dtu-operation-mapping.md  e1000-qemu-config.md  experiment-results.md  jira-confluence.md  reusable-infrastructure.md
.claude/agents/: semperos-build-agent.md  semperos-test-agent.md
.claude/skills/iso-builder/: SKILL.md
.claude/skills/qemu-smoke-test/: SKILL.md
.claude/skills/xcpng-deploy/: SKILL.md
components/DTUBridge/: DTUBridge.c  crypto_transport.c  crypto_transport.h  e1000_hw.h  lwipopts.h  pci_helpers.h  virtio_pci_net.c  virtio_pci_net.h
components/SemperKernel/: SemperKernel.c  camkes_entry.c  cxx_runtime.cc  cxx_test.cc
components/SemperKernel/src/include/base/: Config.h  DTU.h  Machine.h
components/SemperKernel/src/include/base/arch/baremetal/: Env.h
components/SemperKernel/src/include/base/arch/host/: DTU.h  Env.h
components/SemperKernel/src/include/base/arch/sel4/: Config.h  DTU.h
components/SemperKernel/src/include/base/benchmark/: capbench.h
components/SemperKernel/src/include/base/col/: Treap.h
components/SemperKernel/src/include/base/com/: GateStream.h
components/SemperKernel/src/include/base/log/: Kernel.h
components/SemperKernel/src/include/base/stream/: IStringStream.h  OStringStream.h  Serial.h
components/SemperKernel/src/include/base/util/: Functional.h  String.h  Subscriber.h
components/SemperKernel/src/include/m3/: VPE.h
components/SemperKernel/src/include/m3/server/: LocalPipeServer.h  RequestHandler.h  Server.h
components/SemperKernel/src/include/thread/: Thread.h  ThreadManager.h
components/SemperKernel/src/include/thread/arch/sel4/: Thread.h
components/SemperKernel/src/kernel/: Coordinator.cc  DTU.h  KernelcallHandler.cc  KernelcallHandler.h  Kernelcalls.cc  Kernelcalls.h  Platform.h  SyscallHandler.cc  WorkLoop.cc  capbench.cc
components/SemperKernel/src/kernel/arch/sel4/: DTU.cc  PEManager.cc  Platform.cc  VPE.cc  kernel.cc  libbase_stubs.cc
components/SemperKernel/src/kernel/cap/: CapTable.cc  Capability.cc  Capability.h  Revocations.cc  Revocations.h
components/SemperKernel/src/kernel/com/: RecvBufs.h
components/SemperKernel/src/kernel/ddl/: MHTInstance.cc  MHTInstance.h  MHTPartition.cc  MHTPartition.h
components/SemperKernel/src/kernel/mem/: Slab.cc
components/SemperKernel/src/kernel/pes/: KPE.cc  KPE.h  PEManager.h  VPE.h
components/VDTUService/: VDTUService.c
components/VPE0/: VPE0.c  tsc_calibrate.c
components/VPE1/: VPE1.c
components/include/: tsc_calibrate.h  vdtu_channels.h  vdtu_per_ep.h  vdtu_ring.h
docker/: Dockerfile  docker-compose-3node.yml  docker-compose.yml  run-qemu.sh
docker/crypto-test/: Dockerfile  Makefile  crypto_test  crypto_test.c  docker-compose.yml
docs/: DESIGN.md  FPT-176-vdtu-redesign-comment.md  TASK-EXP1-REPORT.md  TASK-EXP2A-LOCAL-UNVERIFIED-REPORT.md  TASK04-REPORT.md  TASK05-REPORT.md  TASK08-DESIGN.md  TASK08-REPORT.md  TASK09-DESIGN.md  TASK09-REPORT.md  TASK10-KLOG-AUDIT.md  TASK10-REPORT.md  TASK14-IDENTITY-AUDIT.md  TASK14-REPORT.md  TASK15-REPORT.md  VERIFICATION-WIRING-SPEC.md  XCPNG-AUDIT.md  XCPNG-RUNBOOK.md  implementation-audit.md  secure-distributed-capability-architecture.md  task04-kernel-integration.md
docs/spikes/: FPT-167-raft-selection.md  FPT-175-hille-on-hardware.md
interfaces/: VDTUConfig.idl4
logserver/: sel4-serial-logger.service  sel4-serial-logger.sh  setup-logserver.sh
proofs/: AncestryWalk.fst  EnforcementChain.fst  EpState.Low.fst  EpState.fst  Makefile  README.md  vdtu_ep_state_manual.h
proofs/.cache/: EpState_Low.krml
results/: exp2a_20260331_160004.json  exp2a_20260417_120000.json  exp2a_spanning_legacy_20260425_213701.json  exp_unified_legacy_20260426.json  exp_unified_legacy_v2_20260426.json
scripts/: grub.cfg  make-iso.sh  run-bench-3node.sh  run-qemu-3node-virtio.sh
src/: vdtu_channels.c  vdtu_per_ep.c  vdtu_ring.c
tests/: Makefile  test_ring  test_ring.c  test_vdtu_config.c  test_vdtu_per_ep.c
